--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.4.0+20180305.1",
   "description": "",
   "dependencies": {
+    "axios": "^0.18.0",
     "cordova-custom-config": "5.0.2",
     "cordova-plugin-splashscreen": "5.0.1",
     "cordova-plugin-whitelist": "1.3.3",
@@ -10,6 +11,7 @@
     "monaca-plugin-monaca-core": "3.2.0",
     "onsenui": "~2.9.0",
     "vue": "~2.5.0",
+    "vue-axios": "^2.1.1",
     "vue-loader": "11.0.0",
     "vue-onsenui": "^2.6.0",
     "vue-template-compiler": "~2.5.0"
